--- a/grassreview.ph/index.html
+++ b/grassreview.ph/index.html
@@ -9,15 +9,13 @@
 <body>
   <header>
     <h1>🌾 GrassReview.ph</h1>
-    <p>Free Online Review for Agriculturist Licensure Exam (Philippines)</p>
+    <p>Free Review for Agriculturist Licensure Exam (Philippines)</p>
   </header>
 
   <nav>
-    <ul>
-      <li><a href="#subjects">Subjects</a></li>
-      <li><a href="laws/agricultural-laws.html">Laws (RA)</a></li>
-      <li><a href="#exams">Mock Exams</a></li>
-    </ul>
+    <a href="#subjects">Subjects</a>
+    <a href="laws/agricultural-laws.html">Laws (RA)</a>
+    <a href="#exams">Mock Exams</a>
   </nav>
 
   <main>
@@ -33,14 +31,13 @@
         <a href="subjects/soil-science.html" class="card">🟤 Soil Science</a>
         <a href="subjects/crop-protection.html" class="card">🐞 Crop Protection</a>
         <a href="subjects/animal-science.html" class="card">🐄 Animal Science</a>
-        <a href="subjects/agri-econ.html" class="card">💰 Agri Economics & Marketing</a>
+        <a href="subjects/agri-econ.html" class="card">💰 Agri Economics</a>
         <a href="subjects/extension.html" class="card">📢 Extension & Communication</a>
       </div>
     </section>
 
     <section id="exams">
       <h2>📝 Take a Mock Exam</h2>
-      <p>Each exam contains 100 questions. Instant results included.</p>
       <div class="card-grid">
         <a href="exams/crop-science-exam.html" class="card">Crop Science Exam</a>
         <a href="exams/soil-science-exam.html" class="card">Soil Science Exam</a>
@@ -54,7 +51,6 @@
 
   <footer>
     <p>&copy; 2025 GrassReview.ph | Made for Filipino Agriculturists 🇵🇭</p>
-    <p><a href="https://da.gov.ph" target="_blank">Department of Agriculture</a> | <a href="https://ched.gov.ph" target="_blank">CHED</a></p>
   </footer>
 </body>
 </html>
