--- a/grassreview.ph/subjects/animal-science.html
+++ b/grassreview.ph/subjects/animal-science.html
@@ -9,19 +9,16 @@
   <header><h1>Animal Science</h1></header>
   <nav><a href="../index.html">← Back to Home</a></nav>
 
-  <main>
-    <section>
-      <h2>📘 Key Topics</h2>
-      <p>Detailed review notes and flashcards coming soon.</p>
+  <main style="padding: 1.5rem;">
+    <h2>Key Topics</h2>
+    <p>Detailed notes and flashcards coming soon.</p>
 
-      <h2>🔗 Reliable Resources</h2>
-      <ul>
-        <li><a href='https://bain.da.gov.ph' target='_blank'>Bureau of Animal Industry (BAI)</a></li>
-        <li><a href='https://oie.asia' target='_blank'>World Organisation for Animal Health</a></li>
-      </ul>
+    <h2>Reliable Resources</h2>
+    <ul>
+      <li><a href='https://bain.da.gov.ph' target='_blank'>Bureau of Animal Industry (BAI)</a></li>
+    </ul>
 
-      <a href="../exams/animal-science-exam.html" class="card">Take Animal Science Exam →</a>
-    </section>
+    <a href="../exams/'$subject'-exam.html" class="card">Take Exam →</a>
   </main>
 </body>
 </html>
