--- a/grassreview.ph/subjects/crop-science.html
+++ b/grassreview.ph/subjects/crop-science.html
@@ -9,20 +9,18 @@
   <header><h1>Crop Science</h1></header>
   <nav><a href="../index.html">← Back to Home</a></nav>
 
-  <main>
-    <section>
-      <h2>📘 Key Topics</h2>
-      <p>Detailed review notes and flashcards coming soon.</p>
+  <main style="padding: 1.5rem;">
+    <h2>Key Topics</h2>
+    <p>Detailed notes and flashcards coming soon.</p>
 
-      <h2>🔗 Reliable Resources</h2>
-      <ul>
-        <li><a href='https://www.da.gov.ph' target='_blank'>Department of Agriculture (DA)</a></li>
-        <li><a href='https://www.irri.org' target='_blank'>International Rice Research Institute (IRRI)</a></li>
-        <li><a href='https://www.philrice.gov.ph' target='_blank'>PhilRice</a></li>
-      </ul>
+    <h2>Reliable Resources</h2>
+    <ul>
+      <li><a href='https://www.da.gov.ph' target='_blank'>Department of Agriculture (DA)</a></li>
+      <li><a href='https://www.philrice.gov.ph' target='_blank'>PhilRice</a></li>
+      <li><a href='https://www.irri.org' target='_blank'>IRRI</a></li>
+    </ul>
 
-      <a href="../exams/crop-science-exam.html" class="card">Take Crop Science Exam →</a>
-    </section>
+    <a href="../exams/'$subject'-exam.html" class="card">Take Exam →</a>
   </main>
 </body>
 </html>
