--- a/grassreview.ph/subjects/extension.html
+++ b/grassreview.ph/subjects/extension.html
@@ -9,19 +9,16 @@
   <header><h1>Extension & Communication</h1></header>
   <nav><a href="../index.html">← Back to Home</a></nav>
 
-  <main>
-    <section>
-      <h2>📘 Key Topics</h2>
-      <p>Detailed review notes and flashcards coming soon.</p>
+  <main style="padding: 1.5rem;">
+    <h2>Key Topics</h2>
+    <p>Detailed notes and flashcards coming soon.</p>
 
-      <h2>🔗 Reliable Resources</h2>
-      <ul>
-        <li><a href='https://da.gov.ph/afrs' target='_blank'>Agricultural Fisheries and Rural Development</a></li>
-        <li><a href='https://www.fao.org/e-extension/en/' target='_blank'>FAO e-Extension</a></li>
-      </ul>
+    <h2>Reliable Resources</h2>
+    <ul>
+      <li><a href='https://da.gov.ph/afrs' target='_blank'>DA-AFRS Program</a></li>
+    </ul>
 
-      <a href="../exams/extension-exam.html" class="card">Take Extension & Communication Exam →</a>
-    </section>
+    <a href="../exams/'$subject'-exam.html" class="card">Take Exam →</a>
   </main>
 </body>
 </html>
