--- a/grassreview.ph/subjects/soil-science.html
+++ b/grassreview.ph/subjects/soil-science.html
@@ -9,19 +9,16 @@
   <header><h1>Soil Science</h1></header>
   <nav><a href="../index.html">← Back to Home</a></nav>
 
-  <main>
-    <section>
-      <h2>📘 Key Topics</h2>
-      <p>Detailed review notes and flashcards coming soon.</p>
+  <main style="padding: 1.5rem;">
+    <h2>Key Topics</h2>
+    <p>Detailed notes and flashcards coming soon.</p>
 
-      <h2>🔗 Reliable Resources</h2>
-      <ul>
-        <li><a href='http://sssp.org.ph' target='_blank'>Soil Science Society of the Philippines</a></li>
-        <li><a href='https://www.fao.org/soils-portal/en/' target='_blank'>FAO Soils</a></li>
-      </ul>
+    <h2>Reliable Resources</h2>
+    <ul>
+      <li><a href='http://sssp.org.ph' target='_blank'>Soil Science Society of the Philippines</a></li>
+    </ul>
 
-      <a href="../exams/soil-science-exam.html" class="card">Take Soil Science Exam →</a>
-    </section>
+    <a href="../exams/'$subject'-exam.html" class="card">Take Exam →</a>
   </main>
 </body>
 </html>
