--- a/grassreview.ph/laws/agricultural-laws.html
+++ b/grassreview.ph/laws/agricultural-laws.html
@@ -6,35 +6,26 @@
   <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 <body>
-  <header><h1>📜 Key Philippine Agricultural Laws (RA)</h1></header>
+  <header><h1>📜 Philippine Agricultural Laws (RA)</h1></header>
   <nav><a href="../index.html">← Home</a></nav>
 
-  <main>
-    <section>
-      <h2>Relevant Republic Acts</h2>
-      <ul>
-        <li><strong>RA 8435 (AFMA)</strong> – Agriculture and Fisheries Modernization Act</li>
-        <li><strong>RA 10601</strong> – Agricultural Machinery and Mechanization Act</li>
-        <li><strong>RA 11203</strong> – Rice Tariffication Law</li>
-        <li><strong>RA 9512</strong> – National Environmental Awareness and Education Act</li>
-        <li><strong>RA 10816</strong> – Animal Welfare Act</li>
-        <li><strong>RA 11511</strong> – Digital Payments in Government</li>
-        <li><strong>PD 27</strong> – Land Reform Act (Coco Levy, Agrarian Reform)</li>
-      </ul>
+  <main style="padding: 1.5rem;">
+    <h2>Key Republic Acts</h2>
+    <ul>
+      <li><strong>RA 8435</strong> – Agriculture and Fisheries Modernization Act (AFMA)</li>
+      <li><strong>RA 10601</strong> – Agricultural Mechanization Law</li>
+      <li><strong>RA 11203</strong> – Rice Tariffication Law</li>
+      <li><strong>RA 9512</strong> – Environmental Awareness and Education Act</li>
+      <li><strong>RA 10816</strong> – Animal Welfare Act</li>
+      <li><strong>PD 27</strong> – Land Reform Act</li>
+    </ul>
 
-      <h2>Useful Links</h2>
-      <ul>
-        <li><a href="https://www.officialgazette.gov.ph" target="_blank">Official Gazette (Full Text of RAs)</a></li>
-        <li><a href="https://www.lawphil.net" target="_blank">LawPhil.net</a></li>
-        <li><a href="https://da.gov.ph" target="_blank">Department of Agriculture</a></li>
-      </ul>
-
-      <p><em>Tip: Focus on RA 8435, RA 10601, and RA 11203 for licensure exam.</em></p>
-    </section>
+    <h2>Useful Links</h2>
+    <ul>
+      <li><a href="https://www.officialgazette.gov.ph" target="_blank">Official Gazette (Full Text)</a></li>
+      <li><a href="https://www.lawphil.net" target="_blank">LawPhil.net</a></li>
+      <li><a href="https://www.da.gov.ph" target="_blank">Department of Agriculture</a></li>
+    </ul>
   </main>
-
-  <footer>
-    <p>&copy; 2025 GrassReview.ph | For educational use only</p>
-  </footer>
 </body>
 </html>
