--- a/grassreview.ph/subjects/agri-econ.html
+++ b/grassreview.ph/subjects/agri-econ.html
@@ -9,19 +9,16 @@
   <header><h1>Agricultural Economics</h1></header>
   <nav><a href="../index.html">← Back to Home</a></nav>
 
-  <main>
-    <section>
-      <h2>📘 Key Topics</h2>
-      <p>Detailed review notes and flashcards coming soon.</p>
+  <main style="padding: 1.5rem;">
+    <h2>Key Topics</h2>
+    <p>Detailed notes and flashcards coming soon.</p>
 
-      <h2>🔗 Reliable Resources</h2>
-      <ul>
-        <li><a href='https://psa.gov.ph' target='_blank'>Philippine Statistics Authority (PSA)</a></li>
-        <li><a href='https://www.worldbank.org/en/country/philippines' target='_blank'>World Bank - Agriculture</a></li>
-      </ul>
+    <h2>Reliable Resources</h2>
+    <ul>
+      <li><a href='https://psa.gov.ph' target='_blank'>Philippine Statistics Authority (PSA)</a></li>
+    </ul>
 
-      <a href="../exams/agri-econ-exam.html" class="card">Take Agricultural Economics Exam →</a>
-    </section>
+    <a href="../exams/'$subject'-exam.html" class="card">Take Exam →</a>
   </main>
 </body>
 </html>
