Made a bash edit

--- a/grassreview.ph/index.html
+++ b/grassreview.ph/index.html
@@ -16,6 +16,8 @@
     <a href="#subjects">Subjects</a>
     <a href="laws/agricultural-laws.html">Laws (RA)</a>
     <a href="#exams">Mock Exams</a>
+    <a href="login.html">Login</a>
+    <a href="settings.html">Settings</a>
   </nav>
 
   <main>
