--- a/grassreview.ph/subjects/soil-science.html
+++ b/grassreview.ph/subjects/soil-science.html
@@ -1,24 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Soil Science - GrassReview.ph</title>
-  <link rel="stylesheet" href="../assets/css/style.css" />
-</head>
-<body>
-  <header><h1>Soil Science</h1></header>
-  <nav><a href="../index.html">← Back to Home</a></nav>
-
-  <main style="padding: 1.5rem;">
-    <h2>Key Topics</h2>
-    <p>Detailed notes and flashcards coming soon.</p>
-
-    <h2>Reliable Resources</h2>
-    <ul>
-      <li><a href='http://sssp.org.ph' target='_blank'>Soil Science Society of the Philippines</a></li>
-    </ul>
-
-    <a href="../exams/'$subject'-exam.html" class="card">Take Exam →</a>
-  </main>
-</body>
-</html>
+<h1>Soil Science</h1><p>Coming soon.</p><a href='../exams/soil-science-exam.html'>Take Exam</a>
