--- a/grassreview.ph/subjects/crop-science.html
+++ b/grassreview.ph/subjects/crop-science.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Crop Science - GrassReview.ph</title>
-  <link rel="stylesheet" href="../assets/css/style.css" />
-</head>
-<body>
-  <header><h1>Crop Science</h1></header>
-  <nav><a href="../index.html">← Back to Home</a></nav>
-
-  <main style="padding: 1.5rem;">
-    <h2>Key Topics</h2>
-    <p>Detailed notes and flashcards coming soon.</p>
-
-    <h2>Reliable Resources</h2>
-    <ul>
-      <li><a href='https://www.da.gov.ph' target='_blank'>Department of Agriculture (DA)</a></li>
-      <li><a href='https://www.philrice.gov.ph' target='_blank'>PhilRice</a></li>
-      <li><a href='https://www.irri.org' target='_blank'>IRRI</a></li>
-    </ul>
-
-    <a href="../exams/'$subject'-exam.html" class="card">Take Exam →</a>
-  </main>
-</body>
-</html>
+<h1>Crop Science</h1><p>Coming soon.</p><a href='../exams/crop-science-exam.html'>Take Exam</a>
